// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get default presets functions getDefaultMarginPreset handle breakpoints preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  margin: 0 12px 0 0;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    margin: 0 12px 0 0;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin: 0 16px 0 0;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    margin: 0 16px 0 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultMarginPreset handle overwrite variable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  margin: 0 0 40px 0;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultPaddingPreset handle breakpoints preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  padding: 0 0 8px 0;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    padding: 0 0 12px 0;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    padding: 0 0 16px 0;
  }
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultPaddingPreset handle overwrite variable 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  padding: 24px;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultStylePreset handles string preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  color: #0a0a0a;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultStylePreset overwrite preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  background-color: #EF1703;
  color: #FFFFFF;
}

.emotion-0 svg {
  fill: #FFFFFF;
  color: #FFFFFF;
}

<p
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultTypePreset handles object breakpoints 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultTypePreset with breakpoints and crop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultTypePreset with customProp 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.1111111111111112;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`get default presets functions getDefaultTypePreset without breakpoints and with crop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: block;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
